<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:id="@+id/lSearch"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tError"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/search_not_found"/>

        <EditText
            android:id="@+id/eSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:hint="@string/search_hint"
            android:background="@drawable/card_white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bSearch"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/title_search"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rArticle">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/pLoading"/>

</FrameLayout>